[package]
name = "robot_ik_wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "robot_ik_wasm"
crate-type = ["cdylib", "rlib"]


[dependencies]
js-sys = "*"
serde_derive = "*"
serde_json = "*"
robot_ik_base = { git = "https://github.com/kpwelsh/RobotIKBase" }
nalgebra = "0.26"
k = "0.25"
wasm-bindgen = { version = "*", features = ["serde-serialize"]}
console_error_panic_hook = "*"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

